# silver-umbrella

./: .gitignore  Pipfile  Procfile  README.md  TODO.md  app.json  data.json  db.sqlite3  db_test.sqlite3  db_testDB.sqlite3  eh.js  manage.py  manga.json  package.json  page.txt  pyproject.toml  requirements.txt  seed.py  task.js  usps.py
appointments/: admin.py  forms.py  (+4 more)
unsorted/glowing_guide/: .gitignore  .prettierignore  Cargo.toml  example.com+5-key.pem  example.com+5.pem  package.json  pyproject.toml  siri.txt
unsorted/glowing_guide/public/: index.html
unsorted/glowing_guide/src/: App.css  App.js  index.js  main.rs  rusty_socket.rs  weather_api.rs
unsorted/glowing_guide/src/components/: Blog.js  Comment.js  Post.js  UserDetail.js  Weather.js
unsorted/glowing_guide/src/context/: BlogContext.js  GameContextProvider.js
unsorted/glowing_guide/src/hooks/: useFetchData.js  usePostData.js
unsorted/glowing_guide/src/static/: MimasPIA17213_1024.jpg:Zone.Identifier  pia19821-nustar_xrt_sun.jpg:Zone.Identifier
unsorted/glowing_guide/www/: server.js
unsorted/glowing_guide/www/config/: db.js  extras.js
unsorted/glowing_guide/www/controllers/: addresses.js  exercises.js  posts.js  todo.js  users.js
unsorted/glowing_guide/www/models/: address.model.js  addresses.models.js  exercise.model.js  post.model.js  time_entry.model.js  todo.model.js  unemployment.model.js  user.model.js
unsorted/glowing_guide/www/routers/: addresses.js  exercises.js  posts.js  todo.js  users.js
unsorted/musical-engine/www/: Cargo.toml  sqlDatabase.mjs
unsorted/musical-engine/www/config/: core.mjs  passwords.mjs  sessions.mjs
unsorted/musical-engine/www/controllers/: todos.mjs
unsorted/musical-engine/www/middlewares/: imageFilter.js  storage.js
unsorted/musical-engine/www/models/: addresses.mjs  posts.mjs  profiles.mjs  todos.mjs  users.mjs  webtokens.mjs
unsorted/musical-engine/www/sockets/: helpers.mjs  methods.mjs
unsorted/musical-engine/www/sql/: users.mjs
unsorted/musical-engine/www/src/: main.rs  users.rs
unsorted/silver-umbrella/: .jsdoc.json  .prettierrc.toml  Pipfile  blog.json  db.sqlite3  manage.py  package.json  pyproject.toml  server.js
unsorted/silver-umbrella/appointments/: apps.py  forms.py  signals.py
unsorted/silver-umbrella/appointments/migrations/: 0001_initial.py  0002_initial.py
unsorted/silver-umbrella/blog/: models.py  moderator_bot.py  tests.py  views.py
unsorted/silver-umbrella/blog/migrations/: 0002_auto_20210703_1613.py  0003_blog_date_expired.py  0004_auto_20210706_1427.py  0005_blog_is_public.py
unsorted/silver-umbrella/chat/: admin.py  models.py  sync_consumers.py  views.py
unsorted/silver-umbrella/chat/migrations/: 0001_initial.py
unsorted/silver-umbrella/internal/docs/: API_SECURITY_CHECKLIST.md  PRODUCTION_PLAN.md  TODO.md  emojis.json
unsorted/silver-umbrella/leads/: admin.py  models.py  views.py
unsorted/silver-umbrella/media/: example.py  image_metadata.py
unsorted/silver-umbrella/polls/: urls.py
unsorted/silver-umbrella/public/: index.html
unsorted/silver-umbrella/silver_umbrella/: __init__.py  encryption.js  encryption.py  index.html  models.py  tests.py  wsgi.py
unsorted/silver-umbrella/tasks/: models.py  signals.py  tests.py
unsorted/silver-umbrella/todo/: TodoCreate.js  TodoDetail.js  TodoList.js  e.js  todo_context.js  todo_styles.css
unsorted/silver-umbrella/users/: admin.py  seed.py  serializers.py  views.py
(+379 files in other folders)
