[package]
name = "www"
version = "0.1.0"
authors = ["Stephen Smith <wearypossum4770@yahoo.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
tokio = { version = "1", features = ["full"] }
redis = "0.21.2"
mini-redis = "0.4"
